# fictional-octo-guacamole

./: README.md  noxfile.py  pyproject.toml
src/fictional_octo_guacamole/: console.py  private_vars.py  wikipedia.py
tests/: test_console.py
